# ourworldindata_covid

./: .gitignore  Untitled-1.qmd  create_duckdb.py  main.py  pyproject.toml
explore_covid/: __init__.py  database.py  get_data.py  utils.py
notebooks/: Untitled-1.qmd  Untitled-1.quarto_ipynb  explo.py
